# QuantAI

./: .gitignore  README.md  _distill_query.py  pyproject.toml  sitecustomize.py  start_frontend.bat
.playwright-cli/: page-2026-06-14T01-28-43-312Z.yml  page-2026-06-14T01-32-24-052Z.yml
.streamlit/: config.toml
configs/: data_sources.yaml  default.yaml  macro_regime.yaml  optimizer.yaml  quickstart.yaml  risk_limits.yaml  seed_universe.csv  strategy_multifactor_balanced.yaml  strategy_text_event_prototype.yaml  universe_us_large_mid.yaml
docs/: CODE_REVIEW.md  CURRENT_RESEARCH_STATUS.md  DATA_LIMITATIONS.md  OPERATIONS.md  PROJECT_STATUS.md  README.md  RESEARCH_CREDIBILITY_PLAN.md  RESEARCH_METHODOLOGY.md
experiments/: baseline_elastic_net.yaml  baseline_lightgbm.yaml  baseline_ridge.yaml  baseline_rule_score.yaml  baseline_sec_text.yaml  confirmatory_rule_score.yaml  example.yaml  ml-value-low-risk-style-neutral-v2.yaml  ml_value_low_risk_lgbm_steady.yaml  multifactor-rule-confirmatory-v2.yaml  registry.duckdb  study_closures.json
notebooks/: diagnostics.ipynb  research_examples.ipynb
qss/: __init__.py  cli.py
reports/: latest_run.json
src/: __init__.py
tests/: test_attribution.py  test_autopilot.py  test_backtest.py  test_backtest_ledger.py  test_baseline_comparison.py  test_cli_monthly_pipeline.py  test_comprehensive_report.py  test_config.py  test_data_providers.py  test_data_status.py  test_data_validation.py  test_docs_links.py  test_e2e_research_run.py  test_factors.py  test_forward_validation.py  test_fundamentals_ingestion.py  test_governance.py  (+18 more)
(+2231 files in other folders)
