[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-stock-system"
version = "0.2.0"
description = "Lightweight quantitative U.S. equity research system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cvxpy",
  "duckdb",
  "exchange-calendars>=4.13",
  "loguru",
  "lightgbm>=4.0",
  "numpy",
  "pandas",
  "plotly",
  "pyarrow",
  "pydantic>=2",
  "pyyaml",
  "requests",
  "scikit-learn",
  "scipy",
  "statsmodels",
  "streamlit",
  "typer",
  "yfinance",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/qss/dashboard/streamlit_app.py" = ["E402"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100
